--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/buttonsGrid.css" type="text/css">
+        <link rel="stylesheet" href="css/buttonGrid.css" type="text/css">
     </head>
     <body>
-        <script src="js/buttonsGrid.js" type="text/javascript"></script>
+        <script src="js/buttonGrid.js" type="text/javascript"></script>
+        <p id='test'>test text</p>
     </body>
 </html>
